--- a/Preliminary Analysis.ipynb
+++ b/Preliminary Analysis.ipynb
@@ -1060,43 +1060,19 @@
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/HaseebKhan/Documents/Senior Year/CSE 5095/Project/Hate Speech Classifier'"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "path = os.getcwd()\n",
-    "path"
+    "path = os.getcwd()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/HaseebKhan/Documents/Senior Year/CSE 5095/Project/Hate Speech Classifier/altered_hate_speech.csv'"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "new_csv_filename = \"/altered_hate_speech.csv\"\n",
-    "filepath = path + new_csv_filename\n",
-    "filepath"
+    "filepath = path + new_csv_filename"
    ]
   },
   {
