minor edits to preprocessing datafile

--- a/Preprocessing Data.ipynb
+++ b/Preprocessing Data.ipynb
@@ -455,18 +455,400 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>tweet_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>warning: penny boards will make you a faggot</td>\n",
+       "      <td>0.6013</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fuck dykes</td>\n",
+       "      <td>0.7227</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>@sizzurp__ @ilikecats74 @yopapi_chulo @brandon...</td>\n",
+       "      <td>0.5229</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"@jayswaggkillah: \"@jacklynannn: @jayswaggkill...</td>\n",
+       "      <td>0.5184</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>@zhugstubble you heard me bitch but any way i'...</td>\n",
+       "      <td>0.5185</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>@elaynay your a dirty terrorist and your relig...</td>\n",
+       "      <td>0.8816</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>rt @ivanrabago_: @_whiteponyjr_ looking like f...</td>\n",
+       "      <td>0.5207</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>well i thought you knew actually rt @kinghorse...</td>\n",
+       "      <td>0.5619</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>@stonisnipezz i know. it was a joke, faggot.</td>\n",
+       "      <td>0.6419</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>i'm tired of people saying i look like my brot...</td>\n",
+       "      <td>0.6407</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>#voteblue2014 yeah. cuz 8 million people in fa...</td>\n",
+       "      <td>0.7619</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>@andreberto word is you use roids, stupid hypo...</td>\n",
+       "      <td>0.5606</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>i hate faggots like you</td>\n",
+       "      <td>0.8435</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>@moritaheripour shut up nigger whore! hope u g...</td>\n",
+       "      <td>0.8414</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>@oprah @3lwtv fuck you nigger sheboon. hope yo...</td>\n",
+       "      <td>0.8826</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>they used to tie both ends of a niggers legs t...</td>\n",
+       "      <td>0.7620</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>good night fags and fagettes (that's the femal...</td>\n",
+       "      <td>0.6833</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>i cant stand no crybaby ass nigga. if you gonn...</td>\n",
+       "      <td>0.5204</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>rt @nerdkiller669: @shinsnipes no you're a nigger</td>\n",
+       "      <td>0.6410</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>\"i'll fuck you til you love me faggot\" - mike ...</td>\n",
+       "      <td>0.6419</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                           tweet_text  confidence  tweet_class\n",
+       "0        warning: penny boards will make you a faggot      0.6013            1\n",
+       "1                                          fuck dykes      0.7227            2\n",
+       "2   @sizzurp__ @ilikecats74 @yopapi_chulo @brandon...      0.5229            2\n",
+       "3   \"@jayswaggkillah: \"@jacklynannn: @jayswaggkill...      0.5184            2\n",
+       "4   @zhugstubble you heard me bitch but any way i'...      0.5185            1\n",
+       "5   @elaynay your a dirty terrorist and your relig...      0.8816            2\n",
+       "6   rt @ivanrabago_: @_whiteponyjr_ looking like f...      0.5207            2\n",
+       "7   well i thought you knew actually rt @kinghorse...      0.5619            2\n",
+       "8        @stonisnipezz i know. it was a joke, faggot.      0.6419            1\n",
+       "9   i'm tired of people saying i look like my brot...      0.6407            1\n",
+       "10  #voteblue2014 yeah. cuz 8 million people in fa...      0.7619            2\n",
+       "11  @andreberto word is you use roids, stupid hypo...      0.5606            2\n",
+       "12                            i hate faggots like you      0.8435            2\n",
+       "13  @moritaheripour shut up nigger whore! hope u g...      0.8414            2\n",
+       "14  @oprah @3lwtv fuck you nigger sheboon. hope yo...      0.8826            2\n",
+       "15  they used to tie both ends of a niggers legs t...      0.7620            2\n",
+       "16  good night fags and fagettes (that's the femal...      0.6833            2\n",
+       "17  i cant stand no crybaby ass nigga. if you gonn...      0.5204            1\n",
+       "18  rt @nerdkiller669: @shinsnipes no you're a nigger      0.6410            2\n",
+       "19  \"i'll fuck you til you love me faggot\" - mike ...      0.6419            1"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#data.head(20)"
+    "data.head(20)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>confidence</th>\n",
+       "      <th>tweet_class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14489</th>\n",
+       "      <td>@lenaoverflowers i'm not even a coon girl</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14490</th>\n",
+       "      <td>from what i've seen men and women coon at the ...</td>\n",
+       "      <td>0.6633</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14491</th>\n",
+       "      <td>\"bw,take care of me! pls buy my coon ass somet...</td>\n",
+       "      <td>0.6616</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14492</th>\n",
+       "      <td>interesting data on quantifying value of the i...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14493</th>\n",
+       "      <td>@aryan_twr60 thank you_ãâ«ãã_</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14494</th>\n",
+       "      <td>@sardesairajdeep @dwaipayanm if he is aryan th...</td>\n",
+       "      <td>0.6579</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14495</th>\n",
+       "      <td>@sardesairajdeep sir if he is aryan then #mall...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14496</th>\n",
+       "      <td>radio nordfront interview a russian patriot an...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14497</th>\n",
+       "      <td>@nupursanon hope u check ur fb messages, all m...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14498</th>\n",
+       "      <td>wowã_ã__a jewish man having his nose measure...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14499</th>\n",
+       "      <td>oldpicsarchive: a jewish man having his nose m...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14500</th>\n",
+       "      <td>a jewish man having his nose measured during a...</td>\n",
+       "      <td>0.6684</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14501</th>\n",
+       "      <td>ao - aryan huy miss you na!! happy that i'll b...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14502</th>\n",
+       "      <td>@aryantimsina aryan, what is the version of fifa?</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14503</th>\n",
+       "      <td>measured during aryan race determination tests...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14504</th>\n",
+       "      <td>i'm sorry. did i offend your white supremacist...</td>\n",
+       "      <td>0.3418</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14505</th>\n",
+       "      <td>@tradethecycles caucasian euro aryan whatever....</td>\n",
+       "      <td>0.6804</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14506</th>\n",
+       "      <td>@yadavakhilesh sir a patient named aryan khan ...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14507</th>\n",
+       "      <td>@iamshivachari  happy birthday bro _ãâ«ãã_ ...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14508</th>\n",
+       "      <td>@hajrahkiayni aryan kapoor is such a cute name...</td>\n",
+       "      <td>1.0000</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                              tweet_text  confidence  \\\n",
+       "14489          @lenaoverflowers i'm not even a coon girl      1.0000   \n",
+       "14490  from what i've seen men and women coon at the ...      0.6633   \n",
+       "14491  \"bw,take care of me! pls buy my coon ass somet...      0.6616   \n",
+       "14492  interesting data on quantifying value of the i...      1.0000   \n",
+       "14493                   @aryan_twr60 thank you_ãâ«ãã_      1.0000   \n",
+       "14494  @sardesairajdeep @dwaipayanm if he is aryan th...      0.6579   \n",
+       "14495  @sardesairajdeep sir if he is aryan then #mall...      1.0000   \n",
+       "14496  radio nordfront interview a russian patriot an...      1.0000   \n",
+       "14497  @nupursanon hope u check ur fb messages, all m...      1.0000   \n",
+       "14498  wowã_ã__a jewish man having his nose measure...      1.0000   \n",
+       "14499  oldpicsarchive: a jewish man having his nose m...      1.0000   \n",
+       "14500  a jewish man having his nose measured during a...      0.6684   \n",
+       "14501  ao - aryan huy miss you na!! happy that i'll b...      1.0000   \n",
+       "14502  @aryantimsina aryan, what is the version of fifa?      1.0000   \n",
+       "14503  measured during aryan race determination tests...      1.0000   \n",
+       "14504  i'm sorry. did i offend your white supremacist...      0.3418   \n",
+       "14505  @tradethecycles caucasian euro aryan whatever....      0.6804   \n",
+       "14506  @yadavakhilesh sir a patient named aryan khan ...      1.0000   \n",
+       "14507  @iamshivachari  happy birthday bro _ãâ«ãã_ ...      1.0000   \n",
+       "14508  @hajrahkiayni aryan kapoor is such a cute name...      1.0000   \n",
+       "\n",
+       "       tweet_class  \n",
+       "14489            1  \n",
+       "14490            2  \n",
+       "14491            1  \n",
+       "14492            0  \n",
+       "14493            0  \n",
+       "14494            0  \n",
+       "14495            0  \n",
+       "14496            0  \n",
+       "14497            0  \n",
+       "14498            0  \n",
+       "14499            0  \n",
+       "14500            0  \n",
+       "14501            0  \n",
+       "14502            0  \n",
+       "14503            0  \n",
+       "14504            0  \n",
+       "14505            0  \n",
+       "14506            0  \n",
+       "14507            0  \n",
+       "14508            0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#data.tail(20)"
+    "data.tail(20)"
    ]
   },
   {
