Updated Preprocessing Data.ipynb

--- a/Preprocessing Data.ipynb
+++ b/Preprocessing Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "19  \"I'll fuck you til you love me faggot\" - Mike ...      0.6419            1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -631,7 +631,7 @@
        "19  \"i'll fuck you til you love me faggot\" - mike ...      0.6419            1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -895,17 +895,13 @@
     "    words = original_tweet.split()\n",
     "    \n",
     "    for i in range(0, len(words)):\n",
-    "        filtered_word = ''.join(filter(lambda x: x in validCharacters, words[i]))\n",
-    "        words[i] = filtered_word\n",
-    "    \n",
-    "    filtered_tweet = \" \".join(words)\n",
-    "    words = filtered_tweet.split()\n",
-    "    \n",
-    "    for i in range(0, len(words)):\n",
     "        if words[i][0] == '@':\n",
     "            words[i] = \"[@]\"\n",
-    "        if \"http\" in words[i]:\n",
+    "        elif \"http\" in words[i]:\n",
     "            words[i] = \"[LINK]\"\n",
+    "        else:\n",
+    "            filtered_word = ''.join(filter(lambda x: x in validCharacters, words[i]))\n",
+    "            words[i] = filtered_word\n",
     "    \n",
     "    filtered_tweet = \" \".join(words)\n",
     "    \n",
@@ -914,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +960,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[@] [@] [@] is a fag jackie jealous neeeee</td>\n",
+       "      <td>@jayswaggkillah @jacklynannn [@] is a fag jack...</td>\n",
        "      <td>0.5184</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -1060,7 +1056,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>ill fuck you til you love me faggot mike tyson</td>\n",
+       "      <td>ill fuck you til you love me faggot  mike tyson</td>\n",
        "      <td>0.6419</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -1073,7 +1069,7 @@
        "0         warning penny boards will make you a faggot      0.6013            1\n",
        "1                                          fuck dykes      0.7227            2\n",
        "2   [@] [@] [@] [@] [@] at least i dont look like ...      0.5229            2\n",
-       "3          [@] [@] [@] is a fag jackie jealous neeeee      0.5184            2\n",
+       "3   @jayswaggkillah @jacklynannn [@] is a fag jack...      0.5184            2\n",
        "4   [@] you heard me bitch but any way im back th ...      0.5185            1\n",
        "5   [@] your a dirty terrorist and your religion i...      0.8816            2\n",
        "6                     rt [@] [@] looking like faggots      0.5207            2\n",
@@ -1089,10 +1085,10 @@
        "16  good night fags and fagettes thats the female ...      0.6833            2\n",
        "17  i cant stand no crybaby ass nigga if you gonna...      0.5204            1\n",
        "18                       rt [@] [@] no youre a nigger      0.6410            2\n",
-       "19     ill fuck you til you love me faggot mike tyson      0.6419            1"
+       "19    ill fuck you til you love me faggot  mike tyson      0.6419            1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1103,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1207,7 +1203,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14501</th>\n",
-       "      <td>ao aryan huy miss you na happy that ill be abl...</td>\n",
+       "      <td>ao  aryan huy miss you na happy that ill be ab...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1243,13 +1239,13 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14507</th>\n",
-       "      <td>[@] happy birthday bro have an happy year ahead</td>\n",
+       "      <td>[@] happy birthday bro  have an happy year ahead</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14508</th>\n",
-       "      <td>[@] aryan kapoor is such a cute name tho d we ...</td>\n",
+       "      <td>[@] aryan kapoor is such a cute name tho  d we...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -1271,14 +1267,14 @@
        "14498  wowa jewish man having his nose measured durin...      1.0000   \n",
        "14499  oldpicsarchive a jewish man having his nose me...      1.0000   \n",
        "14500  a jewish man having his nose measured during a...      0.6684   \n",
-       "14501  ao aryan huy miss you na happy that ill be abl...      1.0000   \n",
+       "14501  ao  aryan huy miss you na happy that ill be ab...      1.0000   \n",
        "14502              [@] aryan what is the version of fifa      1.0000   \n",
        "14503  measured during aryan race determination tests...      1.0000   \n",
        "14504  im sorry did i offend your white supremacist a...      0.3418   \n",
        "14505  [@] caucasian euro aryan whatever really doesn...      0.6804   \n",
        "14506  [@] sir a patient named aryan khan village mee...      1.0000   \n",
-       "14507    [@] happy birthday bro have an happy year ahead      1.0000   \n",
-       "14508  [@] aryan kapoor is such a cute name tho d we ...      1.0000   \n",
+       "14507  [@] happy birthday bro  have an happy year ahead       1.0000   \n",
+       "14508  [@] aryan kapoor is such a cute name tho  d we...      1.0000   \n",
        "\n",
        "       tweet_class  \n",
        "14489            1  \n",
@@ -1303,7 +1299,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1321,7 +1317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1334,7 +1330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1365,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1387,16 +1383,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "17867"
+       "17933"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1407,16 +1403,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13434"
+       "13471"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1427,16 +1423,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7309"
+       "7330"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1447,16 +1443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4337"
+       "4349"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1474,7 +1470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1483,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1493,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1517,7 +1513,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
