--- a/Stemming Words.ipynb
+++ b/Stemming Words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "4  [@] you heard me bitch but any way im back th ...      0.5185            1"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +342,7 @@
        "4  [@] heard bitch way back th texas wtf talking ...      0.5185            1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +433,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 53,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>warning penny board make faggot</td>\n",
+       "      <td>warn penni board make faggot</td>\n",
        "      <td>0.6013</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -523,19 +523,19 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>[@] [@] [@] [@] [@] least look like jefree sta...</td>\n",
+       "      <td>[@] [@] [@] [@] [@] least look like jefre star...</td>\n",
        "      <td>0.5229</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>[@] [@] [@] fag jackie jealous neeeee</td>\n",
+       "      <td>[@] [@] [@] fag jacki jealou neeeee</td>\n",
        "      <td>0.5184</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>[@] heard bitch way back th texas wtf talking ...</td>\n",
+       "      <td>[@] heard bitch way back th texa wtf talk bitc...</td>\n",
        "      <td>0.5185</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -545,14 +545,14 @@
       ],
       "text/plain": [
        "                                          tweet_text  confidence  tweet_class\n",
-       "0                    warning penny board make faggot      0.6013            1\n",
+       "0                       warn penni board make faggot      0.6013            1\n",
        "1                                          fuck dyke      0.7227            2\n",
-       "2  [@] [@] [@] [@] [@] least look like jefree sta...      0.5229            2\n",
-       "3              [@] [@] [@] fag jackie jealous neeeee      0.5184            2\n",
-       "4  [@] heard bitch way back th texas wtf talking ...      0.5185            1"
+       "2  [@] [@] [@] [@] [@] least look like jefre star...      0.5229            2\n",
+       "3                [@] [@] [@] fag jacki jealou neeeee      0.5184            2\n",
+       "4  [@] heard bitch way back th texa wtf talk bitc...      0.5185            1"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -595,31 +595,31 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>14504</th>\n",
-       "      <td>sorry offend white supremacist aryan nation ne...</td>\n",
+       "      <td>sorri offend white supremacist aryan nation ne...</td>\n",
        "      <td>0.3418</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14505</th>\n",
-       "      <td>[@] caucasian euro aryan whatever really doesn...</td>\n",
+       "      <td>[@] caucasian euro aryan whatev realli doesnt ...</td>\n",
        "      <td>0.6804</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14506</th>\n",
-       "      <td>[@] sir patient named aryan khan village meera...</td>\n",
+       "      <td>[@] sir patient name aryan khan villag meeranp...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14507</th>\n",
-       "      <td>[@] happy birthday bro happy year ahead</td>\n",
+       "      <td>[@] happi birthday bro happi year ahead</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14508</th>\n",
-       "      <td>[@] aryan kapoor cute name tho want kamps firs...</td>\n",
+       "      <td>[@] aryan kapoor cute name tho want kamp first...</td>\n",
        "      <td>1.0000</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -629,11 +629,11 @@
       ],
       "text/plain": [
        "                                              tweet_text  confidence  \\\n",
-       "14504  sorry offend white supremacist aryan nation ne...      0.3418   \n",
-       "14505  [@] caucasian euro aryan whatever really doesn...      0.6804   \n",
-       "14506  [@] sir patient named aryan khan village meera...      1.0000   \n",
-       "14507            [@] happy birthday bro happy year ahead      1.0000   \n",
-       "14508  [@] aryan kapoor cute name tho want kamps firs...      1.0000   \n",
+       "14504  sorri offend white supremacist aryan nation ne...      0.3418   \n",
+       "14505  [@] caucasian euro aryan whatev realli doesnt ...      0.6804   \n",
+       "14506  [@] sir patient name aryan khan villag meeranp...      1.0000   \n",
+       "14507            [@] happi birthday bro happi year ahead      1.0000   \n",
+       "14508  [@] aryan kapoor cute name tho want kamp first...      1.0000   \n",
        "\n",
        "       tweet_class  \n",
        "14504            0  \n",
@@ -643,7 +643,7 @@
        "14508            0  "
       ]
      },
-     "execution_count": 57,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "14019"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
        "10603"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -776,7 +776,7 @@
        "5902"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,7 +787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -796,7 +796,7 @@
        "3549"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +857,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
